--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "db:reset": "npx tsx src/scripts/setup-database.ts"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -42,6 +41,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.0",
@@ -50,13 +50,14 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5"
   }
